upload test file

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import json\n",
     "import openai\n",
     "\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"input your own openai api key. Github do not allow to contain secret info\""
    ]
   },
   {
