--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
     "import json\n",
     "import openai\n",
     "\n",
-    "# =\"input your own openai api key. Github do not allow to contain secret info\""
+    "# =\"input your own api key. Github do not allow to contain secret info\""
    ]
   },
   {
